k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-frontend-service
  namespace: ecom
spec:
  selector:
    app: ecom-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
