k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ingress
  namespace: ecom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ecom.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecom-frontend-service
                port:
                  number: 80
